<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.conquest</groupId>
  <artifactId>ConquestSpawners</artifactId>
  <version>1.0</version>
  <name>ConquestSpawners</name>
  <packaging>jar</packaging>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <paper.version>1.21.4-R0.1-SNAPSHOT</paper.version>
    <decentholograms.version>2.8.3</decentholograms.version> <!-- ✅ Update as needed -->
  </properties>

  <repositories>
    <!-- Paper -->
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>

    <!-- Vault -->
    <repository>
      <id>vault-repo</id>
      <url>https://nexus.hc.to/content/repositories/pub_releases/</url>
    </repository>

    <!-- PlaceholderAPI -->
    <repository>
      <id>placeholderapi-repo</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>

    <!-- ✅ DecentHolograms via JitPack -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Vault API -->
    <dependency>
      <groupId>net.milkbowl.vault</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7</version>
      <scope>provided</scope>
    </dependency>

    <!-- PlaceholderAPI -->
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.5</version>
      <scope>provided</scope>
    </dependency>

    <!-- ✅ DecentHolograms -->
    <dependency>
      <groupId>com.github.DecentSoftware-eu</groupId>
      <artifactId>DecentHolograms</artifactId>
      <version>${decentholograms.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>ConquestSpawners-1.0</finalName>
    <plugins>
      <!-- Compiler Plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>

      <!-- Shade Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
            <configuration>
              <minimizeJar>false</minimizeJar>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>
</project>
